--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicios HTML</title>
+    <style>
+        #conteudo{
+            padding: 30px,0px;
+        }
+    </style>
 </head>
 <body>
     <header>
         Exercicios HTML
     </header>
     <nav>
-        <a href wb-nav="exercicios/teste.html">00 - Teste</a>
+        <a href wb-nav="exercicios/teste.html">00 - Teste</a> |
+        <a href wb-nav="exercicios/texto1.html">00 - Texto</a>
     </nav>
     <section id="conteudo"> </section>
     <footer>
-        <br>
         Curso de web Moderno
     </footer>
     <script>
