--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -17,7 +17,8 @@
     </header>
     <nav>
         <a href wb-nav="exercicios/teste.html">00 - Teste</a> |
-        <a href wb-nav="exercicios/texto1.html">00 - Texto</a>
+        <a href wb-nav="exercicios/texto1.html">01 - Texto 1</a> |
+        <a href wb-nav="exercicios/texto2.html">02 - Texto 2</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
