--- a/exercicios-js/html/exercicios/texto1.html
+++ b/exercicios-js/html/exercicios/texto1.html
@@ -26,4 +26,4 @@
 <p>2<sup>2</sup>= 4 e h<sub>2</sub>O= Água!</p>
 
 <!-- Espaço em branco -->
-<p> Espaço &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; entre palavras</p>
+<p> Espaço entre palavras</p>
