--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -19,6 +19,7 @@
         <a href wb-nav="exercicios/teste.html">00 - Teste</a> |
         <a href wb-nav="exercicios/texto1.html">01 - Texto 1</a> |
         <a href wb-nav="exercicios/texto2.html">02 - Texto 2</a> |
+        <a href wb-nav="exercicios/listas.html">03 - listas</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
