--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -20,6 +20,7 @@
         <a href wb-nav="exercicios/texto1.html">01 - Texto 1</a> |
         <a href wb-nav="exercicios/texto2.html">02 - Texto 2</a> |
         <a href wb-nav="exercicios/listas.html">03 - listas</a> |
+        <a href wb-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
