--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -21,6 +21,7 @@
         <a href wb-nav="exercicios/texto2.html">02 - Texto 2</a> |
         <a href wb-nav="exercicios/listas.html">03 - listas</a> |
         <a href wb-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
+        <a href wb-nav="exercicios/links.html">05 - Links</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
