--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -22,6 +22,7 @@
         <a href wb-nav="exercicios/listas.html">03 - listas</a> |
         <a href wb-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
         <a href wb-nav="exercicios/links.html">05 - Links</a> |
+        <a href wb-nav="exercicios/tabela.html">06 - Tabela</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
