--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -23,6 +23,7 @@
         <a href wb-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
         <a href wb-nav="exercicios/links.html">05 - Links</a> |
         <a href wb-nav="exercicios/tabela.html">06 - Tabela</a> |
+        <a href wb-nav="exercicios/form/form.html">07 - Formulario</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
