--- a/exercicios-js/html/exercicios/form/form.html
+++ b/exercicios-js/html/exercicios/form/form.html
@@ -1,6 +1,47 @@
 <h1>Formulario</h1>
 
-<form action="http://localhost:8080/usuarios" method="POST">
+<form action="http://localhost:3003/usuarios" method="POST">
     <input type="text" name="nome">
-    <button>Icluir</button>
+    <input type="password" name="senha">
+    <textarea name="bio" id="" cols="30" rows="10"></textarea>
+    <div>
+        <input type="radio" name="tipo" value="admin"> Admin 
+        <input type="radio" name="tipo" value="regular"> Regular
+        <input type="radio" name="tipo" value="Professor"> Professor
+    </div>
+    <div>
+        <input type="checkbox" name="Ativo" value="V"> Ativo
+    </div>
+
+    <select name="estado">
+        <option value="ac">Acre</option>
+        <option value="ba">Bahia</option>
+        <option value="ce">Ceará</option>
+    </select>
+
+    <select name="interesses" multiple size="3">
+        <option value="js">JAVAScript</option>
+        <option value="java">JAVA</option>
+        <option value="php">PHP</option>
+        <option value="python">Python</option>
+        <option value="go">Go</option>
+        <option value="c">C</option>
+    </select>
+
+
+    <button>Incluir</button>
 </form>
+
+<style>
+    input,
+    textarea,
+    select{
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    input[type = radio],
+    input[type = checkbox]{
+        display: inline;
+    }
+</style>
