--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -24,6 +24,7 @@
         <a href wb-nav="exercicios/links.html">05 - Links</a> |
         <a href wb-nav="exercicios/tabela.html">06 - Tabela</a> |
         <a href wb-nav="exercicios/form/form.html">07 - Formulario</a> |
+        <a href wb-nav="exercicios/imagens.html">08 - Imagens</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
