--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -25,6 +25,7 @@
         <a href wb-nav="exercicios/tabela.html">06 - Tabela</a> |
         <a href wb-nav="exercicios/form/form.html">07 - Formulario</a> |
         <a href wb-nav="exercicios/imagens.html">08 - Imagens</a> |
+        <a href wb-nav="exercicios/video.html">09 - Video</a> |
     </nav>
     <section id="conteudo"> </section>
     <footer>
