--- a/exercicios-js/css/cores.html
+++ b/exercicios-js/css/cores.html
@@ -11,6 +11,17 @@
             https://coolors.co/
             http://paletton.com/
         */
+
+
+        body{
+            background-color: green;
+            background-color: #ff7809;
+            background-color: #abc;
+            background-color: #edc91280;
+            background-color: #ff0000;
+        }
+
+
     </style>
 </head>
 
