--- a/exercicios-js/css/texto.html
+++ b/exercicios-js/css/texto.html
@@ -6,9 +6,68 @@
     <title>Texto</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <style>
-        /* ... */
+       p{
+           font-size: 1em;
+           font-size: 100%;
+           font-family: 16px;
+           font-size: 12pt;
+           /* unidade absolutas */
+
+           font-size: 100px; /*tamanho do pixel relativo a dencidade da tela*/
+           font-family: 72pt; /*pontos*/
+           font-size: 1in; /*polegada*/
+
+
+        /*unidade relativas*/
+        font-size:  2.2em;
+        font-size: 2.2rem;
+        font-size: 10vw;
+
+        font-family: monospace;
+        font-family: georgia, serif;
+        font-family: verdanea,sans-serif;
+        font-family: 'indie flower', cursive;
+
+        font-weight: 100;
+        font-style: italic;
+
+        text-transform: uppercase;
+        /* text-decoration: aqua underline overline line-through; */
+        word-spacing: 10px;
+        letter-spacing: 20px;
+        line-height: 2.5em;
+        text-align: center;
+
+       }
+
+
+       .botao{
+           font-size: 28px;
+           text-decoration: none;
+           padding: 10px 30px;
+           border-radius: 25px;
+       }
+
+       .destaque{
+           color: #fff;
+           background-color: tomato;
+           box-shadow: 2px 2px 1px 1px black;
+       }
+
+       .destaque:active{
+           box-shadow: none;
+       }
+
         * {
             margin: 0;
+        }
+
+        html{
+            font-size: 28px;
+        }
+
+        div{
+            font-size: 50px;
         }
 
         body {
