--- a/exercicios-js/css/anatomia.html
+++ b/exercicios-js/css/anatomia.html
@@ -5,7 +5,27 @@
     <meta charset="UTF-8">
     <title>Anatomia CSS</title>
     <style>
-        /* ... */
+        .selector{
+            color: #fff;
+            font-size: 30px;
+            text-align: center;
+            border: solid 5px navy;
+            font-family:  Helvetica, monospace;
+            width: calc(100% - 40px);
+            background-color: rgb(74, 109, 184);
+        }
+
+        .selector:hover{
+            background-color: orangered;
+        }
+
+        .selector::first-letter{
+            font-size: 60px;
+            font-weight: bold;
+        }
+
+        
+
     </style>
 </head>
 
