--- a/exercicios-js/css/unidades2.html
+++ b/exercicios-js/css/unidades2.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <title>Unidades #02</title>
     <style>
-        /* ... */
+        .fora{
+            position: relative;
+            background-color: orange;
+            width: 400px;
+            height: 400px;
+            padding: 50px;
+
+        }
+
+        .dentro{
+            background-color: mediumvioletred;
+            height: 200px;
+            width: 100%;
+            position: relative;
+            position: static;
+            position: absolute;
+            /* position: fixed; */
+        }
+
     </style>
 </head>
 <body>
